# bowl-of-scenes

./: .gitignore  LICENSE  PLAN.md  README.md  config.yaml  main.py  pyproject.toml
examples_of_workflows/fixers/: autodetection_inpainting.json  controlnet_tile_upscale.json  rembg.json  simple_adetailer.json  simple_img2img_refinement.json  simple_upscale.json  ultimate_sd_upscale.json
src/: database.py
src/controllers/: category_ctrl.py  common.py  ctrl_types.py  fixer_ctrl.py  generator_ctrl.py  group_ctrl.py  item_ctrl.py  job_ctrl.py  manager_ctrl.py  project_ctrl.py  repl_ctrl.py  serializers.py  server_ctrl.py  servers.py  workflow_ctrl.py
src/controllers/command_ctrl/: command_ctrl.py  command_parser.py  command_runner.py  command_validator.py
src/core/: config.py  utils.py
src/core/config/: config.py
src/core/utils/: __init__.py  auto_masking.py  ipadapter_injector.py  lorainjector.py  mask_injector.py  masking.py  maskinjector.py  utils.py
src/db/models/: __init__.py  category.py  common.py  group.py  item.py  process.py  project.py  result.py  server.py  workflow.py
src/db/records/: __init__.py  category.py  category_rec.py  command_rec.py  common.py  fixer_rec.py  generator_rec.py  group.py  group_rec.py  item.py  item_rec.py  job_rec.py  process.py  process_rec.py  project.py  project_rec.py  result.py  result_rec.py  server.py  server_rec.py  workflow.py  workflow_rec.py
src/pages/: categories_page.py  commands_page.py  fixers_page.py  generators_page.py  groups_page.py  home.py  home_page.py  items_page.py  jobs_page.py  projects_page.py  repl_page.py  servers.py  servers_page.py  workflows_page.py
src/pages/common/: nav_menu.py
tests/: color_mask_test.py  parser_test.py
